backend: add clerk for auth

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 # Gemini API
 GOOGLE_GENERATIVE_AI_API_KEY=your_token_here
 
+# Clerk Auth
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=your_token_here
+CLERK_SECRET_KEY=your_token_here
+
 # DB - doesn't actually use Turso unless we're deploying (see below)
 TURSO_DATABASE_URL=file:sqlite.db
 
